--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/recycle-bin(Orange).png
+   - assets/recycle-bin(Blue).png
+   - assets/recycle-bin(Brown).png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
