add feature, profile, user auth, redeem, points tracker

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.CAMERA"/>
     <application
-        android:label="eco_sort_ai"
+        android:label="EcoSort AI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
